--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <h2>🔒 Acceso restringido</h2>
     <p>Ingresa la contraseña para acceder</p>
     <input type="password" id="password" placeholder="Contraseña">
-    <button onclick="verificarPassword()">Entrar</button>
+    <button type="button" onclick="verificarPassword()">Entrar</button>
     <p id="mensaje-error" style="color: yellow; margin-top: 10px;"></p>
   </div>
 
